@@ -1,5 +1,14 @@
 2010-01-05  Roland McGrath  <roland@redhat.com>
 
+	* dwarf_aggregate_size.c: New file.
+	* Makefile.am (libdw_a_SOURCES): Add it.
+	* libdw.h: Declare it.
+	* libdwP.h: Add INTDECL.
+	* libdw.map (ELFUTILS_0.144): New set.  Add dwarf_aggregate_size.
+
+	* dwarf_srclang.c: Add INTDEF.
+	* libdwP.h: Add INTDECL.
+
 	* dwarf.h: Add some more DW_AT_GNU_* types from gcc.
 
 	* dwarf.h: Add DW_AT_GNU_vector, DW_AT_GNU_template_name.
